# ups-rag-system

./: .env_example  .gitignore  README.md  pyproject.toml
notebooks/: trail.ipynb
src/configs/: constants.py  path_settings.py  settings.py
src/model_factory/: embedding_model.py  llm_model.py
src/rag/: generation.py  ingestion.py  preprocessing.py  prompts.py  retrieval.py
src/streamlit/: app.py
