[project]
name = "ups-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastembed>=0.8.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
